<resources>
    <string name="app_name">와디즈</string>
    <string name="loading">로딩중입니다.</string>
    <string name="network_error">네트워크 연결이 원활하지 않습니다.</string>

    <string name="reward_home_all">전체</string>
    <string name="search_bar_hint">어떤 프로젝트를 찾고 계신가요?</string>
    <string name="signup_terms">와디즈 서비스 이용약관, 쿠폰포인트 오픈알림 뉴스레터 수신   (선택)</string>
    <string name="password_validation"><![CDATA[영문, 숫자, 특수문자 (!@#$%^&*+-)를 조합한 8자 이상]]></string>
    <string name="fragment_global_explanation">해외의 많은 메이커들의 와디즈를 통한 국내 첫 진출 펀딩을 만나보세요!   \n공식 유통사를 통해 국내에 최초로 정식 런칭하는 리워드 프로젝트입니다.</string>
    <string name="project_details_title">[전지적 매니저 시점] 운전자의 목을 지켜주는 차량용 목베게</string>
    <string name="project_details_info_text">운전 시 가장 위험에 노출되어 있는 목! 전지적 매니저의 시점으로, 세상 모든 운전자들의 건강과 휴식, 안전을 위해 제대로 만든 차량용 목베게 </string>
    <string name="more_info_foot">6.10.0  \n라이프 스타일 투자플랫폼  \nWADIZ Platform Co.,Ltd</string>
    <string name="project_details_reward_info">아이돈 케어 마스크(Second Skin) 3개 + 2개월(60일 사용) 리필필터 3팩(15EA)(개당 29,666원)</string>
    <string name="project_details_fund_guide_main">이 프로젝트의 위험요인 및 정책을 반드시\n확인하세요.</string>
    <string name="fund_guide_details1">펀딩 받은 후, 리워드를 제작할 수 있는 크라우드 펀딩의 특성과 생산 과정에서의 예상치 못한 상황으로 인하여 리워드 발송이 지연되거나 발송이 불가할 수 있습니다.</string>
    <string name="fund_guide_details2">와디즈에서 펀딩하는 방법이 궁금하다면?</string>
    <string name="fund_policy_notice"><b>"잠깐!"</b> 결제하기가 아닌 펀딩하기인 이유를 확인하고, 펀딩하세요.</string>
    <string name="policy_explanation_text1">펀딩 후, 리워드를 제작, 준비하는 크라우드펀딩 특성상, 품질 이슈가 발생할 수 있습니다.  \n\n리워드 품질 이슈 발생 시 <b>메이커의 리워드 관련 정책</b>을 꼭 확인해주세요.</string>

    <string name="policy_of_maker_name_text1">의 리워드 관련 정책</string>
    <string name="policy_reward_date_text1">펀딩이 종료되고 목표 금액이 달성될 경우 </string>
    <string name="policy_reward_date_text2"> 에 결제가 진행됩니다. \n\n펀딩 종료 </string>
    <string name="policy_reward_date_text3"> 이후에는 메이커의 프로젝트 수행을 위해 결제 취소가 불가합니다. </string>

    <string name="policy_explanation_text3">메이커가 약속한 리워드 발송 시작을 확인했나요? 메이커는 펀딩이 성공해야 리워드 제작, 준비를 진행합니다. \n\n리워드 펀딩 특성상 발송이 지연되거나 불가할 수 있으니, <b>메이커의 발송 지연 정책</b>을 꼭 확인해주세요.</string>
    <string name="policy_of_maker_name_text2"> 발송 지연 정책</string>
    <string name="change_profile_img"><u>바꾸기</u></string>
    <string name="delete_profile_img"><u>삭제</u></string>
    <string name="upload_profile_img"><u>프로필 사진 등록하기</u></string>

</resources>

