<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:overScrollMode="never"
        android:padding="20dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/icon_go_back_arrow"
                android:text=" 스토리로 돌아가기" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/fund_policy_notice"
                android:textColor="#000000"
                android:textSize="30dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/project_details_reward_border"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/project_details_reward_policy_cb1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:lineSpacingExtra="5dp"
                    android:textColor="#cfcfcf"
                    android:layout_marginTop="5dp"
                    android:padding="10dp"
                    android:text="펀딩한 리워드는 새롭게 준비하고 있는 제품, 서비스입니다." />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lineColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:padding="10dp"
                    android:text="@string/policy_explanation_text1"
                    android:textColor="#000000" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lineColor" />

                <TextView
                    android:id="@+id/project_policy_of_maker_name1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:padding="10dp"
                    android:text="@string/policy_of_maker_name_text1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/project_details_reward_border"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/project_details_reward_policy_cb2"
                    style="@style/policy_checkbox_text_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:padding="10dp"
                    android:text="바로 결제되지 않으며, 펀딩 종료 후에는 결제를 취소할 수 없습니다." />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lineColor" />

                <TextView
                    android:id="@+id/project_details_reward_policy_text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:padding="10dp"
                    android:text="@string/policy_reward_date_text2"
                    android:textColor="#000000" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/project_details_reward_border"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/project_details_reward_policy_cb3"
                    style="@style/policy_checkbox_text_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:padding="10dp"
                    android:text="펀딩한 리워드는 즉시 배송되지 않습니다." />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lineColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:padding="10dp"
                    android:text="@string/policy_explanation_text3"
                    android:textColor="#000000" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lineColor" />

                <TextView
                    android:id="@+id/project_policy_of_maker_name2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:padding="10dp"
                    android:text="@string/policy_of_maker_name_text2" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/policy_continue_funding_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#cfcfcf"
        android:clickable="false"
        android:gravity="center"
        android:paddingVertical="15dp"
        android:text="계속해서 펀딩하기"
        android:textColor="#ffffff"
        android:textSize="18sp" />

</RelativeLayout>