<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/light_grey_background"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/activity_search_icon_go_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:gravity="start"
            android:src="@drawable/icon_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:text="프로필"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/activity_search_icon_go_home"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:gravity="end"
            android:src="@drawable/icon_home" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

                <TextView
                    android:id="@+id/profile_my_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="프로필 정보 설정"
                    android:textColor="#000000"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/profile_my_membership"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="프로필 사진"
                    android:textSize="15sp"/>

            <FrameLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/profile_profile_img_background"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@mipmap/ic_launcher" />

                <ImageView
                    android:id="@+id/profile_profile_img"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:visibility="invisible"/>

            </FrameLayout>


            <LinearLayout
                android:id="@+id/upload_profile_image_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:visibility="visible">
                <TextView
                    android:id="@+id/upload_profile_img_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_profile_img"/>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/edit_profile_image_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:visibility="gone">
                <TextView
                    android:id="@+id/change_profile_img_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_profile_img"
                    android:layout_marginEnd="20dp"/>

                <TextView
                    android:id="@+id/delete_profile_img_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_profile_img"/>
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="관심사"
                android:layout_marginTop="25dp"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="최소 5개 이상 관심사를 선택해 주세요."
                android:layout_marginTop="5dp"
                android:textSize="13sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="50dp">

                <Button
                    android:id="@+id/edit_profile_cancel_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_profile_btn"
                    android:text="취소"
                    android:layout_margin="5dp"
                    android:textColor="#ffffff"
                    android:layout_weight="1"
                    android:stateListAnimator="@null" />

                <Button
                    android:id="@+id/edit_profile_ok_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_profile_ok_btn"
                    android:text="확인"
                    android:layout_margin="5dp"
                    android:textColor="#ffffff"
                    android:layout_weight="1"
                    android:stateListAnimator="@null"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>